<resources>
    <string name="app_name">DevicesGroup_C</string>
    <string name="settings_saved">Settings saved...</string>
    <string name="edit_depart_name">Edit name of department:</string>
    <string name="print_contrast">Print contrast:</string>
    <string name="print_barcode">Print barcode</string>
    <string name="print_logo">Print logo</string>
    <string name="print_sum_in_alternative_currency">Print sum in alternative currency</string>
    <string name="non_fiscal_receipt">Non Fiscal Receipt</string>
    <string name="z_report">Z Report</string>
    <string name="data_time_set">Set Date Time</string>
    <string name="action_add_network_connection">Add network connection</string>
    <string name="msg_please_wait">Please, wait&#8230;</string>
    <string name="title_write_items">Writing Items</string>
    <string name="title_reading_items">Reading Items</string>
    <string name="msg_header_saved">Header lines saved...</string>
    <string name="msg_footer_saved">Footer lines saved...</string>
    <string name="title_loading_logo">Loading Logo</string>
    <string name="msg_doc_received">Received documents count: </string>
    <string name="msg_doc_printed">Printed documents count: </string>
    <string name="msg_connect_to_device">Connecting to device...</string>
    <string name="title_restarting">Restarting fiscal device</string>
    <string name="msg_q_restart_device">To take effect you must restart the fiscal device.</string>
    <string name="msg_q_exit">Are you sure you want exit?</string>
    <string name="msg_delete_all">Attention!!!\n Items will be deleted. Restoring them will not be possible!</string>
    <string name="price">Price</string>
    <string name="qty">QTY</string>
    <string name="vat">Tax Group</string>
    <string name="title_disc_surch">Discount Surcharge</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="title_percent">%</string>
    <string name="title_abs">Sum</string>
    <string name="okButtonText">OK</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="total">TOTAL</string>
    <string name="add_sale">Add</string>
    <string name="print">Print Free Text</string>
    <string name="line1">Description</string>
    <string name="test_sales">Test Sale</string>
    <string name="test_salesEx">Extended Sale</string>
    <string name="header_footer"><![CDATA[Header&Footer]]></string>
    <string name="_0_00">0.00</string>
    <string name="_0_01">0.01</string>
    <string name="_0_001">0.001</string>
    <string name="a">A</string>
    <string name="_percent">%</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="e">E</string>
    <string name="local">Local:</string>
    <string name="foreign">Foreign:</string>
    <string name="exchange_rate">Exchange rate:</string>
    <string name="read_from_device">Read from device</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="cancel">Cancel</string>
    <string name="footer">Footer</string>
    <string name="remaining_changes">Remaining changes:</string>
    <string name="save_configuration">Save configuration</string>
    <string-array name="array_TaxCode">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
    </string-array>
    <string-array name="array_TaxCodeCyr">
        <item>А</item>
        <item>Б</item>
        <item>В</item>
        <item>Г</item>
        <item>Д</item>
        <item>Е</item>
        <item>Ж</item>
        <item>З</item>
    </string-array>
    <string-array name="array_BarcodeType">
        <item>EAN8 barcode</item>
        <item>EAN13 barcode</item>
        <item>Code128 barcode</item>
        <item>QR code</item>
    </string-array>
    <string-array name="array_ComPortBPS">
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>7200</item>
        <item>9600</item>
        <item>14400</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
    </string-array>
    <string-array name="array_PinpadPort">
        <item>1-COM1</item>
        <item>2-COM2</item>
        <item>3-RESERVED</item>
        <item>4-Bluetooth</item>
    </string-array>
    <string-array name="array_PinpadType">
        <item>1-BORICA</item>
        <item>2-UBB</item>
        <item>3-DSK</item>
    </string-array>
    <string-array name="array_PinpadServer">
        <item>0-GPRS</item>
        <item>1-LAN</item>
    </string-array>
    <string-array name="array_PinpadPY2">
        <item>0 - payment with card with pinpad</item>
        <item>1 - menu for payment</item>
    </string-array>
    <string-array name="array_PinpadPY4">
        <item>0 - payment PY4</item>
        <item>1 - with loyalty scheme</item>
    </string-array>
    <string-array name="array_payment_typeAB">
        <item>‘P’ - Плащане в брой</item>
        <item>‘N’ - Плащане с кредит</item>
        <item>‘C’ - Плащане с чек</item>
        <item>‘D’ - Плащане с дебитна карта</item>
        <item>‘I’ - Програмируем тип плащане 1</item>
        <item>‘J’ - Програмируем тип плащане 2</item>
        <item>‘K’ - Програмируем тип плащане 3</item>
        <item>‘L’ - Програмируем тип плащане 4</item>
        <item>‘i’ - Програмируем тип плащане 1</item>
        <item>‘j’ - Програмируем тип плащане 2</item>
        <item>‘k’ - Програмируем тип плащане 3</item>
        <item>‘l’ - Програмируем тип плащане 4</item>
        <item>‘m’ - Талони</item>
        <item>‘n’ - Външни талони</item>
        <item>‘o’ - Амбалаж</item>
        <item>‘p’ - Вътрешно обслужване</item>
        <item>‘q’ - Повреди</item>
        <item>‘r’ - Банкови трансфери</item>
        <item>‘s’ - С чек</item>

    </string-array>
    <string name="name">Name</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_footer">Set Footer</string>
    <string name="header">Header</string>
    <string name="set_header">Set Header</string>
    <string name="starting_datetime">Date Time</string>
    <string name="document_type">Document Type</string>
    <string name="ending_datetime">End Data Time</string>
    <string name="by_document_number">By Doc Number</string>
    <string name="from_number">From</string>
    <string name="to_number">To</string>
    <string name="from_z_report">From Z report</string>
    <string name="to_z_report">To Z report</string>
    <string name="print_document">Print</string>
    <string name="loading_stamp">Loading Stamp</string>
    <string name="configuration_saved_">Configuration saved...</string>
    <string name="msg_wrong_stamp">Please use stamp filename in format 8.3 (example: stamp123.bmp)</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="set_vats">Set VAT Rates</string>
    <string name="h">H</string>
    <string name="data_time_is_set">Data and time set to device</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="fm_reports">Print FM reports</string>
    <string name="clear_registers">Clear Operatror Registers</string>
    <string name="operator_report">Report By Operator</string>
    <string name="plu_report">Report By Items</string>
    <string name="from_operator">From Operator</string>
    <string name="to_operator">To Operator</string>
    <string name="storno">Storno</string>
    <string name="ex_storno">Extendet Storno</string>
    <string name="password">Password</string>
    <string-array name="array_type_taxn">
        <item>BULSTAT(bulstat)</item>
        <item>EGN</item>
        <item>LNCH</item>
        <item>Service number</item>
    </string-array>
    <string-array name="array_daily_info">
        <item>Payments</item>
        <item>Number and sum of sells</item>
        <item>Discounts and surcharges</item>
        <item>Corrections and annulled receipts</item>
        <item>Cash in and cash out operations</item>
    </string-array>
    <string-array name="array_ej_reports_type">
        <item>All types;</item>
        <item>Fiscal receipts;</item>
        <item>Daily Z reports;</item>
        <item>Invoice receipts;</item>
        <item>Nonfiscal receipts;</item>
        <item>Paidout receipts;</item>
        <item>Fiscal receipts - storno;</item>
        <item>Invoice receipts - storno;</item>
        <item>Cancelled receipts ( all voided );</item>
        <item>Daily X reports;</item>
        <item>Fiscal receipts,invoice receipts,storno and invoice receipts;</item>
    </string-array>
    <string-array name="array_PrintContrast">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="array_vats">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="array_fm_reports_type">
        <item>Short report</item>
        <item>Detailed report</item>
    </string-array>
    <string-array name="array_fm_reports_kind">
        <item>Report by Date</item>
        <item>Report by Number</item>
    </string-array>
    <string-array name="array_other_reports">
        <item>Turnovers detailed</item>
        <item>Turnovers summary</item>
        <item>Turnovers with clearing detailed</item>
        <item>Turnovers with clearing summary</item>
        <item>PLU parameters</item>
    </string-array>
    <string-array name="array_other_reports_kind">
        <item>Report by Items</item>
        <item>Report by Operatrors</item>

    </string-array>
    <string-array name="plu_report_type">
        <item>PLU turnovers</item>
        <item>PLU turnovers with clearing</item>
        <item>PLU parameters</item>
        <item>PLU stock</item>
    </string-array>
    <string-array name="array_storno_type_bg">
        <item>Oператорска грешка</item>
        <item>Връщане/Замяна</item>
        <item>Намаление на данъчната основа</item>
    </string-array>
    <string-array name="array_storno_type">
        <item>Operator error</item>
        <item>Return/Claim</item>
        <item>tax base reduction</item>
    </string-array>
    <string name="department">Department</string>
    <string name="x_report">X Report</string>
    <string name="cancel_all">Cancel Receipt</string>
    <string name="cash_in_out">Cash In / Out</string>
    <string name="title_foreign">Foreign Currency</string>
    <string name="invoice">Invoice</string>
    <string name="additional_info">Additional daily information</string>
    <string name="clients">Clients DB in ECR</string>
    <string name="msg_all">All Items</string>
    <string name="pinpad_demo">Pinpad Demo</string>
</resources>