<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="com.datecs.demo.MenuFrgBinding" />

    <ScrollView
        android:id="@+id/scrBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:configChanges="orientation|screenSize"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/tv_SDK_build"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_set_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/data_time_set" />

                    <Button
                        android:id="@+id/btn_header_footer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/header_footer" />

                    <Button
                        android:id="@+id/btnCashInOut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Cah In/Cash Out " />

                    <Button
                        android:id="@+id/btn_itemsList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Items List" />

                    <Button
                        android:id="@+id/btn_infoEJ"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Journal Search " />

                    <Button
                        android:id="@+id/btn_EjStruct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Search Structured Info" />

                    <Button
                        android:id="@+id/btn_print_config"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Print config" />

                    <Button
                        android:id="@+id/btn_CustomCommand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Command" />

                    <Button
                        android:id="@+id/btn_deviceStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Device Status" />


                    <Button
                        android:id="@+id/btn_vatsDialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Setup VAT" />

                    <Button
                        android:id="@+id/btn_setNetwork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Setup LAN" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_z_report"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/z_report" />

                    <Button
                        android:id="@+id/btn_x_report"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/x_report" />

                    <Button
                        android:id="@+id/btn_AdditionalDay_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/additional_info" />

                    <Button
                        android:id="@+id/btn_non_fiscal_receipt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/non_fiscal_receipt" />

                    <Button
                        android:id="@+id/btn_sale_test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/test_sales" />

                    <Button
                        android:id="@+id/btn_sale_testEx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/test_salesEx" />

                    <Button
                        android:id="@+id/btn_Storno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/storno" />

                    <Button
                        android:id="@+id/btn_Invoice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/invoice" />

                    <Button
                        android:id="@+id/btn_cancel_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/cancel_all" />

                    <Button
                        android:id="@+id/btn_Departments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Departments" />

                    <Button
                        android:id="@+id/btn_Clients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/clients" />
                    <Button
                        android:id="@+id/btn_PinpadDemo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/pinpad_demo" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>