<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="com.datecs.demo.Page_Departments_frg_binding" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_table_bw">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1.2"
                android:text="@string/department"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTextLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1.3"
                android:text="@string/vat"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotSalesSum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1.1"
                android:text="@string/price"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/lv_departments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Click on Item to Edit Department" />

            <Button
                android:id="@+id/btnReadDept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/read_from_device" />

        </LinearLayout>

    </LinearLayout>

</layout>

